# aura-llm-gateway

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  SUPPORT.md  cliff.toml  config.example.yaml  deny.toml  docker-compose.dev.yml  docker-compose.yml  package.json  release-plz.toml  tsconfig.json  vercel.json
.cargo/: audit.toml
.github/: CONTRIBUTING.md  FUNDING.yml  dependabot.yml
.github/workflows/: build-release.yml  ci.yml  claude-code-review.yml  claude.yml  fly-deploy.yml  helm-chart.yml  python-sdk.yml  release-plz.yml  sdk-typescript.yml  security.yml  version-preview.yml
api/_lib/: auth.mts  auth.ts  mint-key.ts  normalize-request.ts
api/auth/: [...all].mts  [...all].ts
api/beta-signup/: index.ts
api/cron/: _db.ts  _fx.ts  _normalize.ts  _providers.ts  _sources.ts  _types.ts  scrape-pricing.ts
api/pricing/: index.ts
api/proxy/: [...path].ts
assets/: README.md
crates/aura-db/: CHANGELOG.md  Cargo.toml
crates/aura-db/src/: error.rs  lib.rs  models.rs  pool.rs  repo.rs
docs/: ADMIN_APP_PLAN.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  LOGO_IMPROVEMENTS.md  README.md  architecture.md  implementation-conversation-persistence.md
migrations/: 20250122_001_initial_schema.sql  20250131_010_feedback_samples.sql  20250203_010_admin_dashboard_views.sql  20250203_011_admin_dashboard_views.sql  20250204_012_performance_indexes.sql  20250204_013_placeholder.sql  20250205_014_tool_calls_view.sql  20250206_015_admin_views_update.sql  20250207_016_harness_tables.sql  20260518_016_playground_auth_schema.sql  20260519_018_playground_beta_signup.sql  20260521_021_playground_demo_organization.sql  20260521_023_org_usage_rollup_from_api_key_usage.sql  20260526_024_request_logs_payload_capture.sql  20260627_025_pricing_scrape_log.sql  20260627_026_model_pricing_batch_tier.sql  20260627_027_add_fireworks_provider.sql  20260628_029_exchange_rates.sql  20260630_028_model_pricing_capabilities.sql
scripts/: setup_playground_org.sql  vercel-build.sh
scripts/bench/: .env.example  .gitignore  README.md  docker-compose.bench.yml  gateway_adapters.py  harness.py  litellm-config.yaml  pyproject.toml
sdks/python/: LICENSE  README.md  pyproject.toml
sdks/python/examples/: async_usage.py  basic_usage.py  langchain_usage.py  tools_usage.py
sdks/python/src/aura/: __init__.py  _async_client.py  client.py  exceptions.py  models.py  types.py
sdks/python/tests/: __init__.py  test_client.py  test_exceptions.py  test_models.py  test_types.py
(+241 files in other folders)
