[project]
name = "aura-bench"
version = "0.1.0"
description = "Apples-to-apples LLM gateway benchmark harness for Aura"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "anyio>=4.4",
    "click>=8.1",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "numpy>=1.26",
]

[tool.ruff]
line-length = 100
target-version = "py311"
