[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aura-llm"
version = "0.1.0"
description = "Python SDK for Aura LLM Gateway - Open Responses API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Aura Team" }
]
keywords = ["llm", "openai", "anthropic", "ai", "gateway", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/UmaiTech/aura-llm-gateway"
Documentation = "https://github.com/UmaiTech/aura-llm-gateway/tree/main/sdks/python"
Repository = "https://github.com/UmaiTech/aura-llm-gateway"

[tool.hatch.build.targets.wheel]
packages = ["src/aura"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
